a little capitalization, and RFC referencing, see issue #551

--- a/artifacts/draft-fussell-acvp-spec-00.html
+++ b/artifacts/draft-fussell-acvp-spec-00.html
@@ -472,7 +472,7 @@
 
   <meta name="dct.creator" content="Fussell, B., Ed., Vassilev, A., Ed., and H. Booth" />
   <meta name="dct.identifier" content="urn:ietf:id:draft-fussell-acvp-spec-00" />
-  <meta name="dct.issued" scheme="ISO8601" content="2018" />
+  <meta name="dct.issued" scheme="ISO8601" content="2019-2-14" />
   <meta name="dct.abstract" content="The ACV Protocol provides a method for communication between a cryptographic module that is embedded inside of a device or otherwise running on a platform accessible via computer network, and an external testing system, using standard network communication interfaces and protocols. This communication protocol can also be used to validate the correctness of the algorithm implementations in the cryptographic module with a validation authority." />
   <meta name="description" content="The ACV Protocol provides a method for communication between a cryptographic module that is embedded inside of a device or otherwise running on a platform accessible via computer network, and an external testing system, using standard network communication interfaces and protocols. This communication protocol can also be used to validate the correctness of the algorithm implementations in the cryptographic module with a validation authority." />
 
@@ -496,7 +496,7 @@
   <td class="right">A. Vassilev, Ed.</td>
 </tr>
 <tr>
-  <td class="left">Expires: August 17, 2019</td>
+  <td class="left">Expires: August 18, 2019</td>
   <td class="right">H. Booth</td>
 </tr>
 <tr>
@@ -505,7 +505,7 @@
 </tr>
 <tr>
   <td class="left"></td>
-  <td class="right">2018</td>
+  <td class="right">February 14, 2019</td>
 </tr>
 
     	
@@ -525,11 +525,11 @@
 <p>This Internet-Draft is submitted in full conformance with the provisions of BCP 78 and BCP 79.</p>
 <p>Internet-Drafts are working documents of the Internet Engineering Task Force (IETF).  Note that other groups may also distribute working documents as Internet-Drafts.  The list of current Internet-Drafts is at http://datatracker.ietf.org/drafts/current/.</p>
 <p>Internet-Drafts are draft documents valid for a maximum of six months and may be updated, replaced, or obsoleted by other documents at any time.  It is inappropriate to use Internet-Drafts as reference material or to cite them other than as "work in progress."</p>
-<p>This Internet-Draft will expire on August 17, 2019.</p>
+<p>This Internet-Draft will expire on August 18, 2019.</p>
 <h1 id="rfc.copyrightnotice">
   <a href="#rfc.copyrightnotice">Copyright Notice</a>
 </h1>
-<p>Copyright (c) 2018 IETF Trust and the persons identified as the document authors.  All rights reserved.</p>
+<p>Copyright (c) 2019 IETF Trust and the persons identified as the document authors.  All rights reserved.</p>
 <p>This document is subject to BCP 78 and the IETF Trust's Legal Provisions Relating to IETF Documents (http://trustee.ietf.org/license-info) in effect on the date of publication of this document.  Please review these documents carefully, as they describe your rights and restrictions with respect to this document.  Code Components extracted from this document must include Simplified BSD License text as described in Section 4.e of the Trust Legal Provisions and are provided without warranty as described in the Simplified BSD License.</p>
 
   
@@ -650,7 +650,7 @@
 </ul>
 
 <p> </p>
-<p id="rfc.section.3.p.3">ACVP defines how to communicate a request (to execute a cryptographic operation) to a cryptographic module, and how to communicate the corresponding response (containing the output of that operation) back to a testing system. It defines a transport (based on HTTP or HTTPS  <a href="#RFC7230">[RFC7230]</a>), an encoding and message format (which is negotiated), and a set of message exchanges. Each vector test set corresponds to a single message exchange driven from the client associated with the module under test. ACVP does not define the cryptographic algorithms, nor does it detail the precise conditions for a response to be acceptable.  Instead, it references existing specifications for those algorithms, and defines a mapping between the data on the wire and the algorithm testing specification. ACVP does not define detailed conformance criteria, such as those in FIPS-140. Instead, it aims to be independent of particular conformance criteria, so that it can be used in multiple domains with different (even potentially conflicting) conformance criteria. ACVP does not define an interface that can be used to manage or control a cryptographic module.</p>
+<p id="rfc.section.3.p.3">ACVP defines how to communicate a request (to execute a cryptographic operation) to a cryptographic module, and how to communicate the corresponding response (containing the output of that operation) back to a testing system. It defines a transport (based on HTTP or HTTPS  <a href="#RFC7230">[RFC7230]</a>), an JSON message structure(which is negotiated), and a set of message exchanges. Each vector test set corresponds to a single message exchange driven from the client associated with the module under test. ACVP does not define the cryptographic algorithms, nor does it detail the precise conditions for a response to be acceptable.  Instead, it references existing specifications for those algorithms, and defines a mapping between the data on the wire and the algorithm testing specification. ACVP does not define detailed conformance criteria, such as those in FIPS-140. Instead, it aims to be independent of particular conformance criteria, so that it can be used in multiple domains with different (even potentially conflicting) conformance criteria. ACVP does not define an interface that can be used to manage or control a cryptographic module.</p>
 <h1 id="rfc.section.3.1"><a href="#rfc.section.3.1">3.1.</a> Audience</h1>
 <p id="rfc.section.3.1.p.1">This document is written to address multiple audiences:</p>
 <p/>
@@ -677,16 +677,16 @@
 </ul>
 
 <p> </p>
-<p id="rfc.section.3.2.p.3">With that in mind there are several expectations when building a server used as a validation authority. A validation authority SHALL use HTTPS <a href="#RFC7230">[RFC7230]</a>, TLS 1.2 <a href="#RFC5246">[RFC5246]</a> or greater and mutual authentication. Therefore a client that expects to be used with a validation authority SHALL have the same requirements. A server, proxy or client developed for the purposes of internal organizational testing only MAY chose not to include some of those features.</p>
+<p id="rfc.section.3.2.p.3">With that in mind there are several expectations when building a server used as a validation authority. A validation authority SHALL use a combination of HTTPS <a href="#RFC7230">[RFC7230]</a>, TLS 1.2 <a href="#RFC5246">[RFC5246]</a> or greater and mutual authentication. Therefore a client that expects to be used with a validation authority SHALL have the same requirements. A server, proxy or client developed for the purposes of internal organizational testing only MAY choose not to include some of those features.</p>
 <h1 id="rfc.section.4"><a href="#rfc.section.4">4.</a> Architecture</h1>
 <p id="rfc.section.4.p.1">A server/client/proxy model is used where the roles are defined as:</p>
 <p/>
 
 <ul>
-  <li>ACV Client - Communicates with the ACV server using Java Script Object Notation (JSON) and collects the test vectors and returns the test results using product specific methods.</li>
+  <li>ACV Client - Communicates with the ACV server using Java Script Object Notation (JSON <a href="#RFC7159">[RFC7159]</a>) and collects the test vectors and returns the test results using product specific methods.</li>
   <li>ACV Server - Sends JSON formatted messaging and test data to the ACV client and processes test responses.</li>
   <li>ACV Proxy - Resides between the ACV server and ACV client to proxy the connection for the client. This is particularly useful when the client does not support TLS, key management or have signature capabilities and they are required by the server. An example architecture is provided in Figure 3.</li>
-  <li>Device Under Test - Contains the crypto module under test which can include various algorithms and functions that encrypt/decrypt, generate keys, signatures, perform varifications and DRBG functions. May also contain the ACVP client.</li>
+  <li>Device Under Test - Contains the crypto module under test which can include various algorithms and functions that encrypt/decrypt, generate keys, signatures, perform verifications and DRBG functions. May also contain the ACVP client.</li>
   <li>Cryptographic Module API - This is the interface, manual or otherwise, to the crypto module. This interface is environment specific and will vary depending on the crypto module and may not be limited to real-time operation. </li>
 </ul>
 
@@ -768,8 +768,8 @@
   <li>Test Group - The set of tests that share common properties within a Test Vector Set.  Uniquely identified within the Test Vector Set by the tgId. Contains many Test Cases.</li>
   <li>Test Case - The smallest unit of the tests that represents an individual testable operation as defined by the parent Test Group. Uniquely identified throughout the Test Vector Set by the tcId.</li>
   <li>Registration - The JSON from the client to the server that describes the algorithms and capabilities for which the client is seeking test cases and a validation. A Registration can submit capabilities for multiple algorithms. Each algorithm will be broken into individual Test Vector Sets.</li>
-  <li>Prompt - The JSON sent from the server to the client defining a single Test Vector Set to use as inputs for testing. Exactly one prompt will exist for each Test Vector Set.</li>
-  <li>Response - The JSON from the client providing the desired cryptographic output for each of the Test Cases defined in the corresponding Prompt file. These are linked via the Test Vector Set vsId. As exactly one prompt exists for each vsId, one response will exist for each prompt.</li>
+  <li>Request - The JSON sent from the server to the client defining a single Test Vector Set to use as inputs for testing. Exactly one request will exist for each Test Vector Set.</li>
+  <li>Response - The JSON from the client providing the desired cryptographic output for each of the Test Cases defined in the corresponding Request file. These are linked via the Test Vector Set vsId. As exactly one request exists for each vsId, one response will exist for each request.</li>
   <li>Disposition - The JSON from the server after the Response is submitted by the client detailing the correctness of the Test Cases. A "passed" disposition indicates that the particular algorithm in the Test Vector Set is ready for validation.</li>
   <li>OE - Operational Environment - The specific hardware and/or software the client's cryptographic implementation uses to run.</li>
   <li>Realtime - For the purposes of this document realtime is defined as the client receiving a vector set and immediately performing the tests and returning the results to the server. In general, this is a case where the ACVP client and crypto module reside in the same box and directly communicate with each other. Non-realtime would refer to the case where the client may gather vector sets from the server and through some means introduce them to the crypto module gather the results and send them back to the server.  In general, this is a case where the device hosting the crypto module cannot communicate directly with the ACVP client.</li>
@@ -845,7 +845,7 @@
     </tr>
     <tr>
       <td class="left">/oes</td>
-      <td class="left"><a href="#oes_get">Return a List of OEs</a> <cite title="NONE">[oes_get]</cite> </td>
+      <td class="left"><a href="#oes_get">Return a list of OEs</a> <cite title="NONE">[oes_get]</cite> </td>
       <td class="left"><a href="#oes_post">Create a new OE</a> <cite title="NONE">[oes_post]</cite> </td>
       <td class="left"/>
       <td class="left"/>
@@ -859,7 +859,7 @@
     </tr>
     <tr>
       <td class="left">/modules</td>
-      <td class="left"><a href="#modules_get">Return a List of Modules</a> <cite title="NONE">[modules_get]</cite> </td>
+      <td class="left"><a href="#modules_get">Return a list of Modules</a> <cite title="NONE">[modules_get]</cite> </td>
       <td class="left"><a href="#modules_post">Register a new Module</a> <cite title="NONE">[modules_post]</cite> </td>
       <td class="left"/>
       <td class="left"/>
@@ -894,7 +894,7 @@
     </tr>
     <tr>
       <td class="left">/algorithms</td>
-      <td class="left"><a href="#algorithms_get">Return a List of Available Algorithms</a> <cite title="NONE">[algorithms_get]</cite> </td>
+      <td class="left"><a href="#algorithms_get">Return a list of available algorithms</a> <cite title="NONE">[algorithms_get]</cite> </td>
       <td class="left"/>
       <td class="left"/>
       <td class="left"/>
@@ -966,7 +966,7 @@
 <h1 id="rfc.section.6.1"><a href="#rfc.section.6.1">6.1.</a> Authentication</h1>
 <p id="rfc.section.6.1.p.1">It is RECOMMENDED that an authentication scheme be used. Typically, a JSON Web Token (JWT) is created by the server upon successful client authentication and returned to the client to use as an authorization mechanism for accessing the server resources - see        <a href="#jwtToken">Section 10.3</a> below for more information.  Depending on the target environment and usage objectives, the authentication can be as weak as basic HTTP authentication or as strong as TLS mutual certificate authentication. Definition of an authentication scheme will not be discussed here, but should be agreed upon between the client and server owning entities including the servers owned by the validation authorities. For the purposes of the message flow examples, no authentication will be used.  </p>
 <h1 id="rfc.section.7"><a href="#rfc.section.7">7.</a> Encoding</h1>
-<p id="rfc.section.7.p.1">The encoding used for the request/response messaging will be JSON. The data will be identified by: Content-type: application/json In order to allow environment specific extensions to a particular version of the ACV protocol, a top-level JSON keyword, extensions will be used to extend the OE description and/or the capabilities. Extensions MAY be ignored by the ACV server. Vector and vector response data will be JSON encoded.</p>
+<p id="rfc.section.7.p.1">The encoding used for the request/response messaging will be JSON (<a href="#RFC7159">[RFC7159]</a>). The data will be identified by: Content-type: application/json In order to allow environment specific extensions to a particular version of the ACV protocol, a top-level JSON keyword, extensions will be used to extend the OE description and/or the capabilities. Extensions MAY be ignored by the ACV server. Vector and vector response data will be JSON encoded.</p>
 <h1 id="rfc.section.8"><a href="#rfc.section.8">8.</a> Submission Size Considerations</h1>
 <p id="rfc.section.8.p.1">Standard submission size handled by the server is 4MB.  In the case that the submission size is larger than 4MB, an additional port will be provided for the target end point.  In order to retrieve this "large submission" URI, the user must calculate the size of the submission in bytes and POST {submissionSize:bytes} to /acvp/acvp/large with their JWT authentication token.  This end point will determine if the submission requires the "large submission" URI and if so, will return the URI to the user.</p>
 <h1 id="rfc.section.9"><a href="#rfc.section.9">9.</a> Versioning</h1>
@@ -1081,7 +1081,7 @@
          |        |testSessions/1/vectorSets/1        |      |            | 
          |        |----------------------------------&gt;|      |            |
          |        |                                   |      |  Retrieve  |                      
-         |        |send test vectors for vsId 1       |      |   Prompt   |
+         |        |send test vectors for vsId 1       |      |  Request   |
          |        |&lt;-  -  -  -  -  -  -  -  -  -  -  -|      |            |
          |        |                                   |      |            |                      
          |        |POST results                       |      |   Submit   |                      
@@ -1295,7 +1295,7 @@
 <p> </p>
 <h1 id="rfc.section.10.6.1"><a href="#rfc.section.10.6.1">10.6.1.</a> <a href="#modules_get" id="modules_get">List Modules</a></h1>
 <p><strong>GET /modules</strong> </p>
-<p id="rfc.section.10.6.1.p.2">Returns a List of available modules.</p>
+<p id="rfc.section.10.6.1.p.2">Returns a list of available modules.</p>
 <h1 id="rfc.section.10.6.1.1"><a href="#rfc.section.10.6.1.1">10.6.1.1.</a> Response</h1>
 <pre>
 [
@@ -1388,7 +1388,7 @@
 <p> </p>
 <h1 id="rfc.section.10.7.1"><a href="#rfc.section.10.7.1">10.7.1.</a> <a href="#oes_get" id="oes_get">List Operational Environments</a></h1>
 <p><strong>GET /oes</strong> </p>
-<p id="rfc.section.10.7.1.p.2">Returns a List of available operational environments.</p>
+<p id="rfc.section.10.7.1.p.2">Returns a list of available operational environments.</p>
 <h1 id="rfc.section.10.7.1.1"><a href="#rfc.section.10.7.1.1">10.7.1.1.</a> Response</h1>
 <pre>
 [
@@ -1476,7 +1476,7 @@
 <p> </p>
 <h1 id="rfc.section.10.8.1"><a href="#rfc.section.10.8.1">10.8.1.</a> <a href="#dependencies_get" id="dependencies_get">List Dependencies</a></h1>
 <p><strong>GET /dependencies</strong> </p>
-<p id="rfc.section.10.8.1.p.2">Returns a List of available dependencies.</p>
+<p id="rfc.section.10.8.1.p.2">Returns a list of available dependencies.</p>
 <h1 id="rfc.section.10.8.1.1"><a href="#rfc.section.10.8.1.1">10.8.1.1.</a> Response</h1>
 <pre>
 [
@@ -1616,7 +1616,7 @@
 <p id="rfc.section.10.9.p.1">The Algorithm resources are informational only.          <a id="CREF3" class="info">[CREF3]<span class="info">Do we want to provide guidance on standardizing the output?</span></a> </p>
 <h1 id="rfc.section.10.9.1"><a href="#rfc.section.10.9.1">10.9.1.</a> <a href="#algorithms_get" id="algorithms_get">Algorithms Listing</a></h1>
 <p><strong>GET /algorithms</strong> </p>
-<p id="rfc.section.10.9.1.p.2">Returns a list of available Algorithms on the server.</p>
+<p id="rfc.section.10.9.1.p.2">Returns a list of available algorithms on the server.</p>
 <h1 id="rfc.section.10.9.1.1"><a href="#rfc.section.10.9.1.1">10.9.1.1.</a> Response</h1>
 <pre>
 [
@@ -2168,6 +2168,12 @@
         <b id="RFC5246">[RFC5246]</b>
       </td>
       <td class="top"><a>Dierks, T.</a> and <a>E. Rescorla</a>, "<a href="http://tools.ietf.org/html/rfc5246">The Transport Layer Security (TLS) Protocol Version 1.2</a>", RFC 5246, DOI 10.17487/RFC5246, August 2008.</td>
+    </tr>
+    <tr>
+      <td class="reference">
+        <b id="RFC7159">[RFC7159]</b>
+      </td>
+      <td class="top"><a>Bray, T.</a>, "<a href="http://tools.ietf.org/html/rfc7159">The JavaScript Object Notation (JSON) Data Interchange Format</a>", RFC 7159, DOI 10.17487/RFC7159, March 2014.</td>
     </tr>
     <tr>
       <td class="reference">
