Shorten the aes-siv keyLen to match xts mode

--- a/artifacts/draft-celi-acvp-block-ciph-00.html
+++ b/artifacts/draft-celi-acvp-block-ciph-00.html
@@ -1519,7 +1519,7 @@ For i = 0 to 399
 <td class="left">AES-SIV</td>
 <td class="left">"1.0.0"</td>
 <td class="left">["encrypt", "decrypt"]</td>
-<td class="left">[256, 384, 512]</td>
+<td class="left">[128, 192, 256]</td>
 <td class="left">{"Min": 0, "Max": 65536, "Inc": any}</td>
 <td class="left"></td>
 <td class="left"></td>
@@ -1874,11 +1874,11 @@ For i = 0 to 399
 </tr>
 <tr>
 <td class="left">AES-SIV</td>
-<td class="left">256, 384, 512</td>
+<td class="left">128, 192, 256</td>
 <td class="left"></td>
 <td class="left"></td>
 <td class="left"></td>
-<td class="left">Note: Implied by the size of underlying AES CMAC block size. For each provided "key", half of it is used for the AES-SIV algorithm's internal generation of the IV. For example, when "keyLen" == 256, ivLen == 128. I.e. "ivLen" == "keyLen"/2</td>
+<td class="left">Note: Implied by the underlying AES CMAC block size. For each provided "key", half of it is used for the AES-SIV algorithm's internal generation of the IV. For example, when "keyLen" == 128, "ivLen" == 128. I.e. "ivLen" == "keyLen"</td>
 <td class="left">within domain</td>
 <td class="left"></td>
 <td class="left"></td>
