Correct the aes-siv ivLen

--- a/artifacts/draft-celi-acvp-block-ciph-00.html
+++ b/artifacts/draft-celi-acvp-block-ciph-00.html
@@ -1878,7 +1878,7 @@ For i = 0 to 399
 <td class="left"></td>
 <td class="left"></td>
 <td class="left"></td>
-<td class="left">Note: Implied by the underlying AES CMAC block size. For each provided "key", half of it is used for the AES-SIV algorithm's internal generation of the IV. For example, when "keyLen" == 128, "ivLen" == 128. I.e. "ivLen" == "keyLen"</td>
+<td class="left">128</td>
 <td class="left">within domain</td>
 <td class="left"></td>
 <td class="left"></td>
