fixed up request status value list

--- a/artifacts/draft-fussell-acvp-spec-00.html
+++ b/artifacts/draft-fussell-acvp-spec-00.html
@@ -1421,8 +1421,16 @@
 <li>
 <strong>url</strong> - <samp>string</samp>, identifier for this resource </li>
 <li>
-<strong>status</strong> - <samp>string</samp>, one of: <ul class="empty"><li>
-<strong>initial</strong> - initial state of the request, created <strong>processing</strong> - server is processing the request <strong>accepted</strong> - the requested operation was successfully processed <strong>rejected</strong> - the requested operation was rejected and no change was made </li></ul>
+<strong>status</strong> - <samp>string</samp>, one of: <ul class="empty">
+<li>
+<strong>initial</strong> - initial state of the request, created </li>
+<li>
+<strong>processing</strong> - server is processing the request </li>
+<li>
+<strong>accepted</strong> - the requested operation was successfully processed </li>
+<li>
+<strong>rejected</strong> - the requested operation was rejected and no change was made </li>
+</ul>
 <p> </p>
 </li>
 <li>
