additional explanation for addresses on a vendor and removed extraneous comma in example

--- a/artifacts/draft-fussell-acvp-spec-00.html
+++ b/artifacts/draft-fussell-acvp-spec-00.html
@@ -1587,6 +1587,7 @@
 <h1 id="rfc.section.10.7.4.1">
 <a href="#rfc.section.10.7.4.1">10.7.4.1.</a> Request</h1>
 <p id="rfc.section.10.7.4.1.p.1">Can be any subset of the updateable properties. If a property is not included its value is not changed. A <samp>null</samp> value for a property indicates the value should be removed.  </p>
+<p id="rfc.section.10.7.4.1.p.2">When updating the addresses array you MUST include at least the <samp>url</samp> of every address you wish to keep. Any missing addresses will be removed and any new addresses will be created.  </p>
 <pre>
 [
     {"acvVersion": &lt;acvp-version&gt;},
@@ -1595,6 +1596,7 @@
         "website": "www.acme.acme",
         "emails" : [ "inquiry@acme.acme" ],
         "addresses" : [{
+                "url" : "/acvp/v1/vendors/2/addresses/4",
                 "street1" : "123 Main Street",
                 "locality" : "Any Town",
                 "region" : "AnyState",
@@ -1849,7 +1851,7 @@
         "type": "Software",
         "vendorUrl": "/acvp/v1/vendors/2",
         "addressUrl": "/acvp/v1/vendors/2/addresses/4",
-        "contactUrls": ["/acvp/v1/persons/1", ],
+        "contactUrls": ["/acvp/v1/persons/1" ],
         "description" : "ACME module with more"
     }
 ]
@@ -1875,7 +1877,7 @@
         "website" : "www.acme.acme"
         "vendorUrl": "/acvp/v1/vendors/2",
         "addressUrl": "/acvp/v1/vendors/2/addresses/4",
-        "contactUrls": ["/acvp/v1/persons/1", ],
+        "contactUrls": ["/acvp/v1/persons/1" ],
         "description": "ACME module with features."
     }
 ]
