consistent naming of vendor resource. improved description for contactsUrl (and slight re-name)

--- a/src/draft-fussell-acvp-spec-00.html
+++ b/src/draft-fussell-acvp-spec-00.html
@@ -1488,7 +1488,7 @@
 <p> </p>
 </li>
 <li>
-<strong>contactUrl</strong> - <samp>string</samp>, identifier for the contact list resource of the vendor resource within which this property is located </li>
+<strong>contactsUrl</strong> - <samp>string</samp>, identifier for the list of person resources associated with this vendor </li>
 <li>
 <strong>addresses</strong> - an address object, <ul class="empty">
 <li>
@@ -1567,7 +1567,7 @@
           "number" : "555-555-1234",
           "type" : "voice"
         }],
-        "contactUrl": "/acvp/v1/vendors/2/contacts",
+        "contactsUrl": "/acvp/v1/vendors/2/contacts",
         "addresses" : [{
             "street1" : "123 Main Street",
             "locality" : "Any Town",
@@ -1682,7 +1682,7 @@
 <li>
 <strong>fullName</strong> - <samp>string</samp> </li>
 <li>
-<strong>organizationUrl</strong> - <samp>string</samp>, identifier for the organization resource this person is associated with </li>
+<strong>vendorUrl</strong> - <samp>string</samp>, identifier for the vendor resource this person is associated with </li>
 <li>
 <strong>emails</strong> - array of <samp>string</samp>s </li>
 <li>
@@ -1694,7 +1694,7 @@
 </ul>
 <p> </p>
 </li>
-<li>The email and phone number values are specific to the person resource and are independent of the equivalent information in the organization resource.</li>
+<li>The email and phone number values are specific to the person resource and are independent of the equivalent information in the vendor resource.</li>
 </ul>
 
 <p> </p>
@@ -1716,7 +1716,7 @@
     {"acvVersion": &lt;acvp-version&gt;},
     {
       "name": "Jane Smith",
-      "organizationUrl" : "/acvp/v1/vendors/2"
+      "vendorUrl" : "/acvp/v1/vendors/2"
       "emails": ["jane.smith@acme.acme"],
       "phoneNumbers" : [
           {
@@ -1746,7 +1746,7 @@
     {
       "url": "/acvp/v1/persons/4",
       "name": "Jane Smith",
-      "organizationUrl" : "/acvp/v1/vendors/2"
+      "vendorUrl" : "/acvp/v1/vendors/2"
       "emails": ["jane.smith@acme.acme"],
       "phoneNumbers" : [
           {
