added documentation for url on address

--- a/src/draft-fussell-acvp-spec-00.html
+++ b/src/draft-fussell-acvp-spec-00.html
@@ -1492,6 +1492,8 @@
 <li>
 <strong>addresses</strong> - an address object, <ul class="empty">
 <li>
+<strong>url</strong> - <samp>string</samp>, identifier for the address resource </li>
+<li>
 <strong>street1</strong> - <samp>string</samp> </li>
 <li>
 <strong>street2</strong> - <samp>string</samp> </li>
@@ -1569,6 +1571,7 @@
         }],
         "contactsUrl": "/acvp/v1/vendors/2/contacts",
         "addresses" : [{
+            "url" : "/acvp/v1/vendors/1/addresses/4",
             "street1" : "123 Main Street",
             "locality" : "Any Town",
             "region" : "AnyState",
