--- a/artifacts/draft-fussell-acvp-spec-00.html
+++ b/artifacts/draft-fussell-acvp-spec-00.html
@@ -2735,6 +2735,8 @@
 <li>
 <strong>submissionSize</strong> - <samp>number</samp>, the maximum size in bytes of the desired submission.  </li>
 <li>
+<strong>vectorSetUrl</strong> - <samp>string</samp>, an identifier of the vector set that will be uploaded as a large submission.  </li>
+<li>
 <strong>url</strong> - <samp>string</samp>, a one-time use url value to use for a large submission.  </li>
 <li>
 <strong>accessToken</strong> - <samp>string</samp>, an optional JWT, that if provided, clients MUST use when accessing the <samp>url</samp>. If not provided, clients MUST use their current <samp>accessToken</samp> when accessing the <samp>url</samp>.  </li>
@@ -2748,10 +2750,11 @@
 [
   {"acvVersion": &lt;acvp-version&gt;},
   {
-      "submissionSize": 5000000
+      "submissionSize": 5000000,
+      "vectorSetUrl" : "/acvp/v1/testSessions/1/vectorSets/10"
   }
 ]
-                         </pre>
+           </pre>
 <h1 id="rfc.section.12.2">
 <a href="#rfc.section.12.2">12.2.</a> Response</h1>
 <pre>
