--- a/artifacts/draft-celi-acvp-sha3-00.html
+++ b/artifacts/draft-celi-acvp-sha3-00.html
@@ -1069,13 +1069,13 @@
                 "tcId": 3456,
                 "len": 128,
                 "msg": "7a4c48eb710299e4ff2be3f446327a6f",
-                "outputLen": 16
+                "outLen": 16
             },
             {
                 "tcId": 3457,
                 "len": 128,
                 "msg": "b16f331b3a0cf4507124b4358f9d15f5",
-                "outputLen": 144
+                "outLen": 144
             }]
         }]
     }
@@ -1094,12 +1094,12 @@
             "tests": [
                 {
                     "tcId": 2170,
-                    "outputLen": 16
+                    "outLen": 16
                     "md": "c604"
                 },
                 {
                     "tcId": 2171,
-                    "outputLen": 144
+                    "outLen": 144
                     "md": "cfc6ed48bb2e61e0a48222d34a424ce9fdbe"
                 }
             ]
