DSA testing revision

--- a/artifacts/acvp_sub_dsa.html
+++ b/artifacts/acvp_sub_dsa.html
@@ -690,6 +690,13 @@
 <td class="left">No</td>
 </tr>
 <tr>
+<td class="left">revision</td>
+<td class="left">The algorithm testing revision to use.</td>
+<td class="left">value</td>
+<td class="left">"1.0"</td>
+<td class="left">No</td>
+</tr>
+<tr>
 <td class="left">prereqVals</td>
 <td class="left">prerequistie algorithm validations</td>
 <td class="left">array of prereqAlgVal objects</td>
@@ -984,6 +991,11 @@
 <tr>
 <td class="left">mode</td>
 <td class="left">The DSA mode used for the test vectors.</td>
+<td class="left">value</td>
+</tr>
+<tr>
+<td class="left">revision</td>
+<td class="left">The algorithm testing revision to use.</td>
 <td class="left">value</td>
 </tr>
 <tr>
@@ -1370,6 +1382,7 @@
 [{
 		"algorithm": "DSA",
 		"mode": "pqgGen",
+		"revision": "1.0",
 		"prereqVals": [{
 				"algorithm": "SHA",
 				"valValue": "123456"
@@ -1440,6 +1453,7 @@
 	{
 		"algorithm": "DSA",
 		"mode": "pqgVer",
+		"revision": "1.0",
 		"prereqVals": [{
 				"algorithm": "SHA",
 				"valValue": "123456"
@@ -1531,6 +1545,7 @@
 	{
 		"algorithm": "DSA",
 		"mode": "keyGen",
+		"revision": "1.0",
 		"prereqVals": [{
 				"algorithm": "SHA",
 				"valValue": "123456"
@@ -1557,6 +1572,7 @@
 	{
 		"algorithm": "DSA",
 		"mode": "sigGen",
+		"revision": "1.0",
 		"prereqVals": [{
 				"algorithm": "SHA",
 				"valValue": "123456"
@@ -1610,6 +1626,7 @@
 	{
 		"algorithm": "DSA",
 		"mode": "sigVer",
+        "revision": "1.0",
 		"prereqVals": [{
 				"algorithm": "SHA",
 				"valValue": "123456"
@@ -1693,6 +1710,7 @@
         "vsId": 1564,
         "algorithm": "DSA",
         "mode": "pqgGen",
+        "revision": "1.0",
         "testGroups": [
             {
                 "tgId": 1,
@@ -1830,6 +1848,8 @@
     {
         "vsId": 1564,
         "algorithm": "DSA",
+        "mode": "pqgVer",
+        "revision": "1.0",
         "testGroups": [
           {
             "tgId": 1,
@@ -1972,6 +1992,7 @@
         "vsId": 1564,
         "algorithm": "DSA",
         "mode": "keyGen",
+        "revision": "1.0",
         "testGroups": [
           {
             "tgId": 1,
@@ -2030,6 +2051,7 @@
         "vsId": 1564,
         "algorithm": "DSA",
         "mode": "sigGen",
+        "revision": "1.0",
         "testGroups": [
             {
                 "tgId": 1,
@@ -2090,6 +2112,8 @@
     {
         "vsId": 1564,
         "algorithm": "DSA",
+        "mode": "sigVer",
+        "revision": "1.0",
         "testGroups": [
           {
             "tgId": 1,
