ECDSA testing revision

--- a/artifacts/acvp_sub_ecdsa.html
+++ b/artifacts/acvp_sub_ecdsa.html
@@ -679,6 +679,13 @@
 <td class="left">No</td>
 </tr>
 <tr>
+<td class="left">revision</td>
+<td class="left">The algorithm testing revision to use.</td>
+<td class="left">value</td>
+<td class="left">"1.0"</td>
+<td class="left">No</td>
+</tr>
+<tr>
 <td class="left">prereqVals</td>
 <td class="left">prerequistie algorithm validations</td>
 <td class="left">array of prereqAlgVal objects</td>
@@ -885,6 +892,11 @@
 <tr>
 <td class="left">mode</td>
 <td class="left">The ECDSA mode used for the test vectors</td>
+<td class="left">value</td>
+</tr>
+<tr>
+<td class="left">revision</td>
+<td class="left">The algorithm testing revision to use.</td>
 <td class="left">value</td>
 </tr>
 <tr>
@@ -1127,6 +1139,7 @@
 [{
 		"algorithm": "ECDSA",
 		"mode": "keyGen",
+		"revision": "1.0",
 		"prereqVals": [{
 				"algorithm": "SHA",
 				"valValue": "123456"
@@ -1158,6 +1171,7 @@
 	{
 		"algorithm": "ECDSA",
 		"mode": "keyVer",
+		"revision": "1.0",
 		"prereqVals": [{
 				"algorithm": "SHA",
 				"valValue": "123456"
@@ -1188,6 +1202,7 @@
 	{
 		"algorithm": "ECDSA",
 		"mode": "sigGen",
+		"revision": "1.0",
 		"prereqVals": [{
 				"algorithm": "SHA",
 				"valValue": "123456"
@@ -1225,6 +1240,7 @@
 	{
 		"algorithm": "ECDSA",
 		"mode": "sigVer",
+		"revision": "1.0",
 		"prereqVals": [{
 				"algorithm": "SHA",
 				"valValue": "123456"
@@ -1283,6 +1299,7 @@
         "vsId": 1564,
         "algorithm": "ECDSA",
         "mode": "keyGen",
+        "revision": "1.0",
         "testGroups": [
             {
 				"tgId": 1,
@@ -1339,6 +1356,7 @@
         "vsId": 1564,
         "algorithm": "ECDSA",
         "mode": "keyVer",
+        "revision": "1.0",
         "testGroups": [
             {
 				"tgId": 1,
@@ -1394,6 +1412,7 @@
         "vsId": 1564,
         "algorithm": "ECDSA",
         "mode": "sigGen",
+        "revision": "1.0",
         "testGroups": [
             {
 				"tgId": 1,
@@ -1452,6 +1471,7 @@
         "vsId": 1564,
         "algorithm": "ECDSA",
         "mode": "sigVer",
+        "revision": "1.0",
         "testGroups": [
             {
 				"tgId": 1,
