--- a/artifacts/acvp_sub_kdf135_ikev1.html
+++ b/artifacts/acvp_sub_kdf135_ikev1.html
@@ -613,6 +613,20 @@
 <td class="left"></td>
 </tr>
 <tr>
+<td class="left">revision</td>
+<td class="left">The algorithm testing revision to use.</td>
+<td class="left">value</td>
+<td class="left">"1.0"</td>
+<td class="left">No</td>
+</tr>
+<tr>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+</tr>
+<tr>
 <td class="left">prereqVals</td>
 <td class="left">Prerequisite algorithm validations</td>
 <td class="left">array of prereqAlgVal objects</td>
@@ -780,6 +794,16 @@
 <tr>
 <td class="left">mode</td>
 <td class="left">"ikev1"</td>
+<td class="left">value</td>
+</tr>
+<tr>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+</tr>
+<tr>
+<td class="left">revision</td>
+<td class="left">"1.0"</td>
 <td class="left">value</td>
 </tr>
 <tr>
@@ -1172,6 +1196,7 @@
 {
     "algorithm": "kdf-components",
     "mode": "ikev1",
+    "revision": "1.0",
     "prereqVals": [
         {
             "algorithm": "SHA",
@@ -1298,7 +1323,9 @@
 	},
 	{
 		"vsId": 1564,
-		"algorithm": "IKEv1",
+		"algorithm": "kdf-components",
+		"mode": "ikev1",
+		"revision": "1.0",
 		"testGroups": [{
 				"tgId": 1,
 				"authenticationMethod": "dsa",
