kdf ikev2 testing revision

--- a/artifacts/acvp_sub_kdf135_ikev2.html
+++ b/artifacts/acvp_sub_kdf135_ikev2.html
@@ -613,6 +613,20 @@
 <td class="left"></td>
 </tr>
 <tr>
+<td class="left">revision</td>
+<td class="left">The algorithm testing revision to use.</td>
+<td class="left">value</td>
+<td class="left">"1.0"</td>
+<td class="left">No</td>
+</tr>
+<tr>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+</tr>
+<tr>
 <td class="left">prereqVals</td>
 <td class="left">Prerequisite algorithm validations</td>
 <td class="left">array of prereqAlgVal objects</td>
@@ -766,6 +780,16 @@
 <tr>
 <td class="left">mode</td>
 <td class="left">"ikev2"</td>
+<td class="left">value</td>
+</tr>
+<tr>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+</tr>
+<tr>
+<td class="left">revision</td>
+<td class="left">"1.0"</td>
 <td class="left">value</td>
 </tr>
 <tr>
@@ -1163,6 +1187,7 @@
 {
     "algorithm": "kdf-components",
     "mode": "ikev2",
+    "revision": "1.0",
     "prereqVals": [
         {
             "algorithm": "SHA",
@@ -1225,7 +1250,9 @@
     },
     {
         "vsId": 1564,
-        "algorithm": "IKEv2",
+        "algorithm": "kdf-components",
+        "mode": "ikev2",
+        "revision": "1.0",
         "testGroups": [
             {
                 "tgId": 1,
