kdf snmp testing revision

--- a/artifacts/acvp_sub_kdf135_snmp.html
+++ b/artifacts/acvp_sub_kdf135_snmp.html
@@ -610,6 +610,20 @@
 <td class="left"></td>
 </tr>
 <tr>
+<td class="left">revision</td>
+<td class="left">The algorithm testing revision to use.</td>
+<td class="left">value</td>
+<td class="left">"1.0"</td>
+<td class="left">No</td>
+</tr>
+<tr>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+</tr>
+<tr>
 <td class="left">prereqVals</td>
 <td class="left">Prerequisite algorithm validations</td>
 <td class="left">array of prereqAlgVal objects</td>
@@ -695,6 +709,16 @@
 <tr>
 <td class="left">mode</td>
 <td class="left">"snmp"</td>
+<td class="left">value</td>
+</tr>
+<tr>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+</tr>
+<tr>
+<td class="left">revision</td>
+<td class="left">"1.0"</td>
 <td class="left">value</td>
 </tr>
 <tr>
@@ -957,6 +981,7 @@
 {
     "algorithm": "kdf-components",
     "mode": "snmp",
+    "revision" "1.0",
     "prereqVals": [
         {
             "algorithm": "SHA",
@@ -991,6 +1016,7 @@
 		"vsId": 1564,
 		"algorithm": "kdf-components",
 		"mode": "snmp",
+    "revision": "1.0",
 		"testGroups": [{
 			"tgId": 1,
 			"engineId": "12345678912345678900",
