kdf ssh testing revision

--- a/artifacts/acvp_sub_kdf135_ssh.html
+++ b/artifacts/acvp_sub_kdf135_ssh.html
@@ -610,6 +610,20 @@
 <td class="left"></td>
 </tr>
 <tr>
+<td class="left">revision</td>
+<td class="left">The algorithm testing revision to use.</td>
+<td class="left">value</td>
+<td class="left">"1.0"</td>
+<td class="left">No</td>
+</tr>
+<tr>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+</tr>
+<tr>
 <td class="left">prereqVals</td>
 <td class="left">Prerequisite algorithm validations</td>
 <td class="left">array of prereqAlgVal objects</td>
@@ -695,6 +709,16 @@
 <tr>
 <td class="left">mode</td>
 <td class="left">"ssh"</td>
+<td class="left">value</td>
+</tr>
+<tr>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+</tr>
+<tr>
+<td class="left">revision</td>
+<td class="left">"1.0"</td>
 <td class="left">value</td>
 </tr>
 <tr>
@@ -1031,6 +1055,7 @@
 {
     "algorithm": "kdf-components",
     "mode": "ssh",
+    "revision": "1.0",
     "prereqVals": [
         {
             "algorithm":"TDES",
@@ -1075,6 +1100,7 @@
         "vsId": 1564,
         "algorithm": "kdf-components",
         "mode": "ssh",
+        "revision": "1.0",
         "testGroups": [
             {
                 "tgId": 1,
