kdf x963 testing revision

--- a/artifacts/acvp_sub_kdf135_x963.html
+++ b/artifacts/acvp_sub_kdf135_x963.html
@@ -610,6 +610,20 @@
 <td class="left"></td>
 </tr>
 <tr>
+<td class="left">revision</td>
+<td class="left">The algorithm testing revision to use.</td>
+<td class="left">value</td>
+<td class="left">"1.0"</td>
+<td class="left">No</td>
+</tr>
+<tr>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+</tr>
+<tr>
 <td class="left">prereqVals</td>
 <td class="left">Prerequisite algorithm validations</td>
 <td class="left">array of prereqAlgVal objects</td>
@@ -723,6 +737,16 @@
 <tr>
 <td class="left">mode</td>
 <td class="left">"ansix9.63"</td>
+<td class="left">value</td>
+</tr>
+<tr>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+</tr>
+<tr>
+<td class="left">revision</td>
+<td class="left">"1.0"</td>
 <td class="left">value</td>
 </tr>
 <tr>
@@ -1021,6 +1045,7 @@
 {
     "algorithm": "kdf-components",
     "mode": "ansix9.63",
+    "revision": "1.0",
     "prereqVals": [
         {
             "algorithm": "SHA",
@@ -1062,6 +1087,7 @@
         "vsId": 1564,
         "algorithm": "kdf-components",
         "mode": "ansix9.63",
+        "revision": "1.0",
         "testGroups": [
             {
                 "tgId": 1,
