Updates all documents to 1.0 (from 0.5 or 0.3) to reflect the testing revision.

--- a/artifacts/draft-celi-acvp-block-ciph-00.html
+++ b/artifacts/draft-celi-acvp-block-ciph-00.html
@@ -426,7 +426,7 @@
   <link rel="schema.dct" href="http://purl.org/dc/terms/" />
 
   <meta name="dct.creator" content="Celi, C., Ed." />
-  <meta name="dct.identifier" content="urn:ietf:id:draft-celi-block-ciph-00" />
+  <meta name="dct.identifier" content="urn:ietf:id:draft-celi-block-ciph-00-1.0" />
   <meta name="dct.issued" scheme="ISO8601" content="2019-02-01" />
   <meta name="dct.abstract" content="This document defines the JSON schema for using symmetric block cipher algorithms with the ACVP specification." />
   <meta name="description" content="This document defines the JSON schema for using symmetric block cipher algorithms with the ACVP specification." />
@@ -460,7 +460,7 @@
   </table>
 
   <p class="title">ACVP Symmetric Block Cipher Algorithm JSON Specification<br />
-  <span class="filename">draft-celi-block-ciph-00</span></p>
+  <span class="filename">draft-celi-block-ciph-00-1.0</span></p>
   
   <h1 id="rfc.abstract"><a href="#rfc.abstract">Abstract</a></h1>
 <p>This document defines the JSON schema for using symmetric block cipher algorithms with the ACVP specification.</p>
