--- a/artifacts/acvp_sub_kdf135_srtp.html
+++ b/artifacts/acvp_sub_kdf135_srtp.html
@@ -397,7 +397,7 @@
   <link rel="schema.dct" href="http://purl.org/dc/terms/" />
 
   <meta name="dct.creator" content="Fussell, B., Ed." />
-  <meta name="dct.identifier" content="urn:ietf:id:draft-ietf-acvp-subkdf135-srtp-0.5" />
+  <meta name="dct.identifier" content="urn:ietf:id:draft-ietf-acvp-subkdf135-srtp-1.0" />
   <meta name="dct.issued" scheme="ISO8601" content="2018-08-01" />
   <meta name="dct.abstract" content="This document defines the JSON schema for using SP800-135 SRTP KDF algorithms with the ACVP specification." />
   <meta name="description" content="This document defines the JSON schema for using SP800-135 SRTP KDF algorithms with the ACVP specification." />
@@ -431,7 +431,7 @@
   </table>
 
   <p class="title">ACVP SRTP Key Derivation Function Algorithm JSON Specification<br />
-  <span class="filename">draft-ietf-acvp-subkdf135-srtp-0.5</span></p>
+  <span class="filename">draft-ietf-acvp-subkdf135-srtp-1.0</span></p>
   
   <h1 id="rfc.abstract"><a href="#rfc.abstract">Abstract</a></h1>
 <p>This document defines the JSON schema for using SP800-135 SRTP KDF algorithms with the ACVP specification.</p>
@@ -610,6 +610,20 @@
 <td class="left"></td>
 </tr>
 <tr>
+<td class="left">revision</td>
+<td class="left">The algorithm testing revision to use.</td>
+<td class="left">value</td>
+<td class="left">"1.0"</td>
+<td class="left">No</td>
+</tr>
+<tr>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+</tr>
+<tr>
 <td class="left">prereqVals</td>
 <td class="left">Prerequisite algorithm validations</td>
 <td class="left">array of prereqAlgVal objects</td>
@@ -709,6 +723,16 @@
 <tr>
 <td class="left">mode</td>
 <td class="left">"srtp"</td>
+<td class="left">value</td>
+</tr>
+<tr>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+</tr>
+<tr>
+<td class="left">revision</td>
+<td class="left">"1.0"</td>
 <td class="left">value</td>
 </tr>
 <tr>
@@ -1057,6 +1081,7 @@
 {
     "algorithm": "kdf-components",
     "mode": "srtp",
+    "revision": "1.0",
     "prereqVals": [
         {
             "algorithm": "AES",
@@ -1110,7 +1135,9 @@
     },
     {
         "vsId": 1564,
-        "algorithm": "SRTP",
+        "algorithm": "kdf-components",
+        "mode": "srtp",
+        "revision": "1.0",
         "testGroups": [
             {
                 "tgId": 1,
