Update sha artifacts

--- a/artifacts/draft-celi-acvp-sha-00.html
+++ b/artifacts/draft-celi-acvp-sha-00.html
@@ -796,7 +796,7 @@ MD[0] = MD[1] = MD[2] = SEED
 <tr>
 <td class="left">resultsArray</td>
 <td class="left">Array of JSON objects that represent each iteration of an MCT. Each iteration will contain the msg and md</td>
-<td class="left">array of objects containing msg and md</td>
+<td class="left">array of objects containing the md</td>
 </tr>
 </tbody>
 </table>
@@ -964,15 +964,12 @@ MD[0] = MD[1] = MD[2] = SEED
 		"tcId": 10246,
 		"resultsArray": [
 		{
-			"msg": "4e971d7d4bb5a67b2fb51e1b6026f9e561b05779ad4783daa999812260f7623f4e971d7d4bb5a67b2fb51e1b6026f9e561b05779ad4783daa999812260f7623f4e971d7d4bb5a67b2fb51e1b6026f9e561b05779ad4783daa999812260f7623f",
 			"md": "220b2bd187bd61affab14cdcfe76dce236c56a9072d55b4f6ac0b739e3c023f7"
 		},
 		{
-			"msg": "220b2bd187bd61affab14cdcfe76dce236c56a9072d55b4f6ac0b739e3c023f7220b2bd187bd61affab14cdcfe76dce236c56a9072d55b4f6ac0b739e3c023f7220b2bd187bd61affab14cdcfe76dce236c56a9072d55b4f6ac0b739e3c023f7",
 			"md": "5eec0361d25bfbc2468d70e2262783145523ffe627052585069413d30ff2caf9"
 		},
 		{
-			"msg": "5eec0361d25bfbc2468d70e2262783145523ffe627052585069413d30ff2caf95eec0361d25bfbc2468d70e2262783145523ffe627052585069413d30ff2caf95eec0361d25bfbc2468d70e2262783145523ffe627052585069413d30ff2caf9",
 			"md": "efbed7619701beda3eeb79946565cf33643b45783f38a4f8a855607bd4d23ce6"
 		}]
     }]
