--- a/artifacts/draft-celi-acvp-sha3-00.html
+++ b/artifacts/draft-celi-acvp-sha3-00.html
@@ -859,7 +859,7 @@
 <tr>
 <td class="left">resultsArray</td>
 <td class="left">Array of JSON objects that represent each iteration of a Monte Carlo Test. Each iteration will contain the msg and md (and outLen for SHAKE-128 and SHAKE-256)</td>
-<td class="left">array of objects containing msg, md (and potentially outLen)</td>
+<td class="left">array of objects containing the md (and potentially outLen)</td>
 </tr>
 </tbody>
 </table>
@@ -1050,11 +1050,9 @@
                     "tcId": 1254,
                     "resultsArray": [
                         {
-                            "msg": "DAE0367015D3019BE3B2A35B9699D22D4D0B81D453EFD32724C149EE",
                             "md": "CE2372967F76F2A6A41C3BF115BEBF6ECA3F63269579F6FC25861B64"
                         },
                         {
-                            "msg": "CE2372967F76F2A6A41C3BF115BEBF6ECA3F63269579F6FC25861B64",
                             "md": "A811B806FE4811B9CC822D7149F7BAC76EF3FA6A40863A865440E244"
                         }
                     ]
