added an example to attempt a better explaination at what group index means

--- a/artifacts/draft-fussell-acvp-spec-00.html
+++ b/artifacts/draft-fussell-acvp-spec-00.html
@@ -1579,8 +1579,9 @@ https://acvts.nist.gov/validation/acvp/v1/testSessions/1
 <p> </p>
 <p>Example</p>
 <pre>
-/resource?property1[0]=eq:foo&amp;property2[1]=ne:bar
+/resource?property1[0]=eq:foo&amp;property2[0]=eq:foo&amp;property1[1]=eq:test&amp;property2[1]=ne:bar
            </pre>
+<p id="rfc.section.11.6.p.3">For the example above the results returned would include resources that have: <samp>property1</samp> equal to <samp>foo</samp> and <samp>property2</samp> equal to <samp>foo</samp> or resources that have <samp>property1</samp> equal to <samp>test</samp> and <samp>property2</samp> not equal to <samp>bar</samp>.  </p>
 <h1 id="rfc.section.11.7">
 <a href="#rfc.section.11.7">11.7.</a> <a href="#requests" id="requests">Requests</a>
 </h1>
