SHAKE - update `outputLength` -> `outputLen` for consistency within capabilities

--- a/artifacts/draft-celi-acvp-sha3-00.html
+++ b/artifacts/draft-celi-acvp-sha3-00.html
@@ -599,7 +599,7 @@
 <td class="left">boolean</td>
 </tr>
 <tr>
-<td class="left">outputLength</td>
+<td class="left">outputLen</td>
 <td class="left">Output length for SHAKE</td>
 <td class="left">domain</td>
 </tr>
@@ -619,7 +619,7 @@
 <th class="left">algorithm</th>
 <th class="left">inBit</th>
 <th class="left">inEmpty</th>
-<th class="left">outputLength</th>
+<th class="left">outputLen</th>
 <th class="left">outBit</th>
 </tr></thead>
 <tbody>
@@ -922,7 +922,7 @@
 	"inBit": true,
 	"inEmpty": true,
 	"outBit": true,
-	"outputLength": [
+	"outputLen": [
         {
 		"min": 16,
 		"max": 1024
