--- a/artifacts/draft-fussell-acvp-spec-00.html
+++ b/artifacts/draft-fussell-acvp-spec-00.html
@@ -914,7 +914,7 @@
                 |                      |                         | |
                 |                      |      DUT                | |
                 |                      +-------------------------+ |
-                | Vendor/Customer Premise                          |
+                | Vendor/Customer Premises                         |
                 +--------------------------------------------------+
 
                      </pre>
