Typo fixes - https://github.com/usnistgov/ACVP/pull/669#issuecomment-506720306

--- a/artifacts/draft-celi-acvp-block-ciph-00.html
+++ b/artifacts/draft-celi-acvp-block-ciph-00.html
@@ -1749,7 +1749,7 @@ For i = 0 to 399
 </tbody>
 </table>
 <p id="rfc.section.4.2.p.8">Note: keyingOption 2 SHALL only available for decrypt operations.</p>
-<p id="rfc.section.4.2.p.9">THe following grid outlines which properties are REQUIRED within the capabilities object array in use for ACVP-AES-FF1 and ACVP-AES-FF3-1.</p>
+<p id="rfc.section.4.2.p.9">The following grid outlines which properties are REQUIRED within the capabilities object array in use for ACVP-AES-FF1 and ACVP-AES-FF3-1.</p>
 <div id="rfc.table.7"></div>
 <div id="property_grid_ff_capabilities"></div>
 <table cellpadding="3" cellspacing="0" class="tt full center">
@@ -1763,7 +1763,7 @@ For i = 0 to 399
 </tr></thead>
 <tbody>
 <tr>
-<td class="left">Alphabet</td>
+<td class="left">alphabet</td>
 <td class="left">An alphabet the IUT supports for Format Preserving Encryption.  Example "0123456789abcdefghijklmnopqrstuvwxyz". Alphabets should be a minimum of two characters, and a maximum of 62 (all numbers and upper and lower case letters).</td>
 <td class="left">string</td>
 <td class="left">Alphanumeric non repeating characters.</td>
