Update symm artifacts for GMAC related changes (0 length payload no longer valid for GCM)

--- a/artifacts/draft-celi-acvp-block-ciph-00.html
+++ b/artifacts/draft-celi-acvp-block-ciph-00.html
@@ -1572,7 +1572,7 @@ For i = 0 to 399
 <td class="left">"1.0"</td>
 <td class="left">["encrypt", "decrypt"]</td>
 <td class="left">[128, 192, 256]</td>
-<td class="left">{"Min": 0, "Max": 65536, "Inc": any}</td>
+<td class="left">{"Min": 8, "Max": 65536, "Inc": 8}</td>
 <td class="left">{"Min": 8, "Max": 1024, "Inc": any}</td>
 <td class="left">["internal", "external"]</td>
 <td class="left">["8.2.1", "8.2.2"]</td>
@@ -1585,7 +1585,7 @@ For i = 0 to 399
 <td class="left">"1.0"</td>
 <td class="left">["encrypt", "decrypt"]</td>
 <td class="left">[128, 256]</td>
-<td class="left">{"Min": 0, "Max": 65536, "Inc": 8}</td>
+<td class="left">{"Min": 8, "Max": 65536, "Inc": 8}</td>
 <td class="left"></td>
 <td class="left"></td>
 <td class="left"></td>
@@ -1598,7 +1598,7 @@ For i = 0 to 399
 <td class="left">"1.0"</td>
 <td class="left">["encrypt", "decrypt"]</td>
 <td class="left">[128, 192, 256]</td>
-<td class="left">{"Min": 0, "Max": 65536, "Inc": any}</td>
+<td class="left">{"Min": 8, "Max": 65536, "Inc": 8}</td>
 <td class="left"></td>
 <td class="left">["internal", "external"]</td>
 <td class="left">["8.2.1", "8.2.2"]</td>
@@ -2545,7 +2545,7 @@ POST [
             96
         ],
         "payloadLen": [
-            0,
+            8,
             256
         ],
         "aadLen": [
@@ -2704,7 +2704,7 @@ POST [
             128
         ],
         "payloadLen": [
-            0,
+            8,
             128
         ],
         "aadLen": [
@@ -3116,20 +3116,20 @@ POST [
             "ivLen": 96,
             "ivGen": "external",
             "ivGenMode": "8.2.2",
-            "payloadLen": 0,
+            "payloadLen": 8,
             "aadLen": 0,
             "tagLen": 32,
             "tests": [
                 {
                     "tcId": 1,
-                    "plainText": "",
+                    "plainText": "AB",
                     "key": "10B8D4C9658590A...",
                     "aad": "",
                     "iv": "3D026F3D590BF1A7..."
                 },
                 {
                     "tcId": 2,
-                    "plainText": "",
+                    "plainText": "CD",
                     "key": "934865822A3ECCB...",
                     "aad": "",
                     "iv": "273F3B30341C779E..."
@@ -3144,7 +3144,7 @@ POST [
             "ivLen": 96,
             "ivGen": "external",
             "ivGenMode": "8.2.2",
-            "payloadLen": 0,
+            "payloadLen": 8,
             "aadLen": 120,
             "tagLen": 32,
             "tests": [
@@ -3153,7 +3153,7 @@ POST [
                     "key": "88AB5441AE2...",
                     "aad": "4E956EF528D...",
                     "iv": "810628011BB0...",
-                    "cipherText": "",
+                    "cipherText": "AB",
                     "tag": "1180FD89"
                 },
                 {
@@ -3161,7 +3161,7 @@ POST [
                     "key": "9149BE47FAEB...",
                     "aad": "938A8FA71324...",
                     "iv": "FF6B72FF25B55...",
-                    "cipherText": "",
+                    "cipherText": "CD",
                     "tag": "6C7528F0"
                 }
 			]
@@ -3181,13 +3181,13 @@ POST [
 			"tests": [{
 					"tcId": 1,
 					"iv": "01020304F966B8...",
-					"ct": "",
+					"ct": "CD",
 					"tag": "427F668E58F56..."
 				},
 				{
 					"tcId": 2,
 					"iv": "01020304C2855...",
-					"ct": "",
+					"ct": "AB",
 					"tag": "D95BD66F7789..."
 				}
 			]
@@ -3196,7 +3196,7 @@ POST [
 			"tgId": 2,
 			"tests": [{
 					"tcId": 902,
-					"pt": "763BF..."
+					"pt": "76"
 				},
 				{
 					"tcId": 903,
