--- a/artifacts/draft-celi-acvp-pbkdf.html
+++ b/artifacts/draft-celi-acvp-pbkdf.html
@@ -635,6 +635,12 @@
 <td class="left">"1.0"</td>
 </tr>
 <tr>
+<td class="left">capabilities</td>
+<td class="left">Array of capabilities</td>
+<td class="left">array</td>
+<td class="left">Each object in the array contains the below properties</td>
+</tr>
+<tr>
 <td class="left">prereqVals</td>
 <td class="left">Prerequisites of the algorithm</td>
 <td class="left">object</td>
@@ -676,48 +682,57 @@
 </table>
 <p id="rfc.section.5.3.p.2">An example registration within an algorithm capability exchange looks like this</p>
 <pre>
-"capability_exchange":
-[
-	{
-	  "algorithm": "kdf-components",
-	  "mode": "PBKDF",
-	  "revision": "1.0",
-	  "iterationCount": [
-	    {
-	      "min": 10,
-	      "max": 1000,
-	      "increment": 1
-	    }
-	  ],
-	  "passwordLen": [
-	    {
-	      "min": 8,
-	      "max": 16,
-	      "increment": 1
-	    }
-	  ],
-	  "saltLen": [
-	    {
-	      "min": 128,
-	      "max": 256,
-	      "increment": 1
-	    }
-	  ],
-	  "keyLen": [
-	    {
-	      "min": 112,
-	      "max": 256,
-	      "increment": 1
-	    }
-	  ],
-	  "hmacAlg": [
-	    "SHA2-224",
-	    "SHA3-256",
-	    "SHA-1",
-	    "SHA2-512",
-	    "SHA3-512"
-	  ]
-	}
+"algorithms":[
+  {
+    "revision":"1.0",
+    "algorithm":"kdf-components",
+    "mode":"pbkdf",
+    "prereqVals":[
+      {
+        "algorithm":"SHA",
+        "valValue":"same"
+      }
+    ],
+    "iterationCount":[
+      {
+        "min":10,
+        "max":1000,
+        "increment":1
+      }
+    ],
+    "keyLen":[
+      {
+        "min":8,
+        "max":4096,
+        "increment":8
+      }
+    ],
+    "passwordLen":[
+      {
+        "min":8,
+        "max":128,
+        "increment":1
+      }
+    ],
+    "saltLen":[
+      {
+        "min":128,
+        "max":4096,
+        "increment":8
+      }
+    ],
+    "hashAlg":[
+      "SHA-1",
+      "SHA2-224",
+      "SHA2-256",
+      "SHA2-384",
+      "SHA2-512",
+      "SHA3-224",
+      "SHA3-256",
+      "SHA3-384",
+      "SHA3-512"
+    ]
+  }
 ]
 </pre>
 <h1 id="rfc.section.5.3.1">
