Updates KDF SP800-108 to include additional HMAC types - corrects typos related to HMAC-SHA2*

--- a/artifacts/acvp_sub_kdf108.html
+++ b/artifacts/acvp_sub_kdf108.html
@@ -762,11 +762,17 @@
 <li>CMAC-AES192</li>
 <li>CMAC-AES256</li>
 <li>CMAC-TDES</li>
-<li>HMAC-SHA1</li>
-<li>HMAC-SHA224</li>
-<li>HMAC-SHA256</li>
-<li>HMAC-SHA384</li>
-<li>HMAC-SHA512</li>
+<li>HMAC-SHA-1</li>
+<li>HMAC-SHA2-224</li>
+<li>HMAC-SHA2-256</li>
+<li>HMAC-SHA2-384</li>
+<li>HMAC-SHA2-512</li>
+<li>HMAC-SHA2-512/224</li>
+<li>HMAC-SHA2-512/256</li>
+<li>HMAC-SHA3-224</li>
+<li>HMAC-SHA3-256</li>
+<li>HMAC-SHA3-384</li>
+<li>HMAC-SHA3-512</li>
 </ul>
 
 <p> </p>
@@ -1189,11 +1195,11 @@
                 "CMAC-AES192",
                 "CMAC-AES256",
                 "CMAC-TDES",
-                "HMAC-SHA1",
-                "HMAC-SHA224",
-                "HMAC-SHA256",
-                "HMAC-SHA384",
-                "HMAC-SHA512"
+                "HMAC-SHA-1",
+                "HMAC-SHA2-224",
+                "HMAC-SHA2-256",
+                "HMAC-SHA2-384",
+                "HMAC-SHA2-512"
             ],
             "supportedLengths": [
                 {
@@ -1222,11 +1228,11 @@
                 "CMAC-AES192",
                 "CMAC-AES256",
                 "CMAC-TDES",
-                "HMAC-SHA1",
-                "HMAC-SHA224",
-                "HMAC-SHA256",
-                "HMAC-SHA384",
-                "HMAC-SHA512"
+                "HMAC-SHA-1",
+                "HMAC-SHA2-224",
+                "HMAC-SHA2-256",
+                "HMAC-SHA2-384",
+                "HMAC-SHA2-512"
             ],
             "supportedLengths": [
                 {
@@ -1257,11 +1263,11 @@
                 "CMAC-AES192",
                 "CMAC-AES256",
                 "CMAC-TDES",
-                "HMAC-SHA1",
-                "HMAC-SHA224",
-                "HMAC-SHA256",
-                "HMAC-SHA384",
-                "HMAC-SHA512"
+                "HMAC-SHA-1",
+                "HMAC-SHA2-224",
+                "HMAC-SHA2-256",
+                "HMAC-SHA2-384",
+                "HMAC-SHA2-512"
             ],
             "supportedLengths": [
                 {
