Adds dkmNonceTypes description and static requirement for KAS-FFC and KAS-ECC

--- a/artifacts/acvp_sub_kas_ffc.html
+++ b/artifacts/acvp_sub_kas_ffc.html
@@ -1046,6 +1046,20 @@
 <td class="left"></td>
 <td class="left"></td>
 </tr>
+<tr>
+<td class="left">kdfNonceTypes</td>
+<td class="left">The nonce type(s) the IUT is to use for deriving keying material. Required for DhStatic scheme.</td>
+<td class="left">array</td>
+<td class="left">randomNonce, timestamp, sequence, timestampSequence </td>
+<td class="left">Yes - required for DhStatic scheme</td>
+</tr>
+<tr>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+</tr>
 </tbody>
 </table>
 <h1 id="rfc.section.3.5.3">
