--- a/artifacts/acvp_sub_kas_ffc.html
+++ b/artifacts/acvp_sub_kas_ffc.html
@@ -1047,7 +1047,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">kdfNonceTypes</td>
+<td class="left">dkmNonceTypes</td>
 <td class="left">The nonce type(s) the IUT is to use for deriving keying material. Required for DhStatic scheme.</td>
 <td class="left">array</td>
 <td class="left">randomNonce, timestamp, sequence, timestampSequence </td>
